--- a/2.html
+++ b/2.html
@@ -711,15 +711,15 @@
                         <div class="question-wrapper">
                             <div class="question">
                                 <div class="question-content arabic-text">
-                                    إذا كان طول ضلع مربع 5 سم، فما هي مساحته ومحيطه؟
+                                    إذا كان طول ضلع مربع 5 cm، فما هي مساحته ومحيطه؟
                                 </div>
                                 <button class="answer-btn" onclick="toggleAnswer(1, event)">
                                     <i class="fas fa-eye"></i> عرض الإجابة
                                 </button>
                             </div>
                             <div class="answer arabic-text" id="answer1">
-                                <p>المساحة = 5 × 5 = 25 سم²</p>
-                                <p>المحيط = 4 × 5 = 20 سم</p>
+                                <p>المساحة = 5 × 5 = 25 cm²</p>
+                                <p>المحيط = 4 × 5 = 20 cm</p>
                             </div>
                         </div>
                         
@@ -727,14 +727,14 @@
                         <div class="question-wrapper">
                             <div class="question">
                                 <div class="question-content arabic-text">
-                                    معين قطره الأكبر 10 سم وقطره الأصغر 6 سم، ما هي مساحته؟
+                                    معين قطره الأكبر 10 cm وقطره الأصغر 6 cm، ما هي مساحته؟
                                 </div>
                                 <button class="answer-btn" onclick="toggleAnswer(4, event)">
                                     <i class="fas fa-eye"></i> عرض الإجابة
                                 </button>
                             </div>
                             <div class="answer arabic-text" id="answer4">
-                                <p>المساحة = (10 × 6) ÷ 2 = 30 سم²</p>
+                                <p>المساحة = (10 × 6) ÷ 2 = 30 cm²</p>
                             </div>
                         </div>
                     </div>
