--- a/2.html
+++ b/2.html
@@ -627,7 +627,7 @@
 
             <!-- الأشكال الهندسية -->
             <section class="section">
-                <h2><i class="fas fa-shapes"></i> قوانين المساحة والمحيط للأشكال الهندسية</h2>
+                <h2><i class="fas fa-shapes"></i> قواعد المساحة والمحيط للأشكال الهندسية</h2>
                 
                 <div class="shape-grid">
 
